# agent-context-redactor

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_context_redactor/: __init__.py  cli.py  manifest.py  models.py  packer.py  policy.py  redactor.py  report.py  scanner.py
examples/: sample-policy.json
examples/sample-project/: README.md  app.py
tests/: helpers.py  test_cli_reports.py  test_packing_manifest.py  test_policy.py  test_redaction.py  test_review_report.py  test_scanner.py
