[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context-redactor"
version = "0.1.0"
description = "Offline CLI for building redacted, reviewable context packages before sharing files with AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Agent Context Redactor Maintainers"}]
keywords = ["ai", "cli", "redaction", "security", "privacy", "codex", "cursor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: Software Development",
]
dependencies = []

[project.scripts]
agent-context-redactor = "agent_context_redactor.cli:main"

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
include = ["agent_context_redactor*"]
